test/chainsaw/tests/aim/service/negative/routing-without-gateway-ref/cluster-image.yaml
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMClusterImage
metadata:
  name: llama-3-8b-routing-no-ref
spec:
  image: ghcr.io/silogen/aim:0.4.0-meta-llama-llama-3.1-8b-instruct-v20251006
  defaultServiceTemplate: llama-3-8b-latency-routing-no-ref
  resources:
    limits:
      amd.com/gpu: '1'
      cpu: '6'
      memory: 48Gi
    requests:
      amd.com/gpu: '1'
      cpu: '4'
      memory: 40Gi
